--- a/css/index.css
+++ b/css/index.css
@@ -170,11 +170,31 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.main-header {
+  text-align: center;
+  padding: 1.5%;
+}
+.main-header h1 {
+  font-size: 4rem;
+  padding: 1%;
+}
+.main-header nav {
+  padding: 1%;
+}
+.main-header nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+  padding: 18px;
+}
 .home .intro h2 {
   padding: 15px;
 }
 .home .intro p {
   padding: 0 15px;
+}
+.home .intro img {
+  max-width: 100%;
 }
 .home .space-images {
   display: flex;
