--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,40 @@
 // Home Content
 
-.home {
+//added by hoolio ---------------->
+.main-header {
+  text-align: center;
+  .pad(1.5%);
+  h1{
+    font-size: 4rem;
+    .pad(1%);
+  }
+  nav {
+    .pad(1%);
+    a {
+      color: black;
+      text-decoration: none;
+      font-size: 1.2rem;
+      .pad(18px)
+      }
+    }
+  }
+//----------------------------------->
 
+.home {
   .intro {
 
     h2 {
-      padding: 15px;
+      .pad(15px);
     }
 
     p {
       padding:0 15px;
     }
-  
+    // Added by Hoolio ---
+    img {               //
+      max-width: 100%;  //
+    }                   //
+   //---------------------
   }
 
   .space-images {
@@ -20,7 +43,7 @@
     width: 100%;
 
     img {
-      width: 28%;
+      .wid(28%);
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
@@ -28,7 +51,7 @@
   }
 
   .visit-planets {
-    padding: 15px;
+    .pad(15px);
 
     h3 {
       margin-top: 11px;
@@ -56,13 +79,13 @@
       p {
         margin-bottom: 26px;
       }
-
+      
       .btn {
       }
     }
 
     .walk-img {
-      width: 46%;
+      .wid(46%);
       margin-left: 4%;
       
       img {
