--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,5 +4,10 @@
     padding: @param;
 }
 .wid(@param) {
-    width(@param);
+    width: @param;
+}
+
+.link(@bgc, @c) {
+    background: @bgc;
+    color: @c;
 }
