--- a/css/index.css
+++ b/css/index.css
@@ -232,11 +232,26 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-img {
+.home .walk .walk-text a {
+  background: black;
+  color: white;
+  padding: 6px 15px 6px 15px;
+  font-size: 1.4rem;
+  border-radius: 6px;
+  text-decoration: none;
+}
+.home .walk .walk-text a:hover {
+  background: white;
+  color: black;
+  font-size: 1.4rem;
+  padding: 6px 15px 6px 15px;
+  border-radius: 6px;
+}
+.home .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+.home .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
