--- a/css/index.css
+++ b/css/index.css
@@ -207,6 +207,16 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home #special {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -223,8 +233,24 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 0px;
+    margin-top: 0px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 20px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -232,7 +258,7 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-text a {
+.home .walk .walk-text .btn a {
   background: black;
   color: white;
   padding: 6px 15px 6px 15px;
@@ -240,18 +266,38 @@ footer {
   border-radius: 6px;
   text-decoration: none;
 }
-.home .walk .walk-text a:hover {
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn a {
+    width: 100%;
+    background: black;
+    color: white;
+    font-size: 1.4rem;
+    border-radius: 6px;
+    text-decoration: none;
+  }
+}
+.home .walk .btn a:hover {
   background: white;
   color: black;
   font-size: 1.4rem;
-  padding: 6px 15px 6px 15px;
   border-radius: 6px;
 }
-.home .walk-img {
+@media (max-width: 500px) {
+  .home .walk .btn a:hover {
+    width: 100%;
+  }
+}
+.walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk-img img {
+@media (max-width: 500px) {
+  .walk-img {
+    width: 100%;
+    padding: 2%;
+  }
+}
+.walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
