--- a/less/home-page.less
+++ b/less/home-page.less
@@ -55,8 +55,17 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        .wid(100%)
+      }
     }
   }
+
+@media @phone {
+  #special {
+    display: none;
+  }
+}
 
   .visit-planets {
     .pad(15px);
@@ -76,9 +85,21 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+     @media @phone {
+       max-width: 100%;
+       display: flex;
+       flex-direction: column-reverse;
+       align-items: center;
+       padding: 0px;
+       margin-top: 0px;
+     }
 
     .walk-text {
       width: 50%;
+       @media @phone {
+         width: 100%;
+         padding:20px;
+       }
 
       h3 {
         margin-bottom: 10px;
@@ -87,18 +108,28 @@
       p {
         margin-bottom: 26px;
       }
-      a {
+      .btn a{
         .link(black, white);
         padding: 6px 15px 6px 15px;
         font-size: 1.4rem;
         border-radius: 6px;
         text-decoration: none;
+        @media @phone {
+           width: 100%;
+           .link(black, white);
+          font-size: 1.4rem;
+          border-radius: 6px;
+          text-decoration: none;
+          }
+        }
       }
-        a:hover {
+       .btn a:hover {
           .link(white, black);
           font-size: 1.4rem;
-          padding: 6px 15px 6px 15px;
           border-radius: 6px;
+          @media @phone {
+              width: 100%;
+          }
         }
       }
     }
@@ -106,6 +137,10 @@
     .walk-img {
       .wid(46%);
       margin-left: 4%;
+      @media @phone{
+        width: 100%;
+        padding: 2%;
+      }
 
       img {
         width: 100%;
@@ -113,7 +148,7 @@
         border-radius: 10px;
       }
     }
-  }
+  
 
 
 // home
